realm用のコンテキストを実装

--- a/ShComp.Realm/ShComp.Realm.csproj
+++ b/ShComp.Realm/ShComp.Realm.csproj
@@ -4,6 +4,11 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <RootNamespace>ShComp.Realms</RootNamespace>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Realm" Version="10.9.0" />
+  </ItemGroup>
 
 </Project>
